# ot-harjoitustyo

./: README.md  pyproject.toml
dokumentaatio/: arkkitehtuuri.md  changelog.md  ohje.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: database.sqlite  database_connection.py  index.py  initialize_database.py
src/application/: card_service.py
src/classes/: card.py
src/repositories/: card_repository.py  user_repository.py
src/tests/: card_service_test.py  user_repository_test.py
src/ui/: card_view.py  front_page_view.py  login_view.py  register_view.py  ui.py
